--- a/Makefile__1
+++ b/Makefile__1
@@ -26,6 +26,13 @@ $(KMC_API_DIR)/mmer.o \
 $(KMC_API_DIR)/kmc_file.o \
 $(KMC_API_DIR)/kmer_api.o
 
+ALGLIB_OBJS := \
+$(ALGLIB_DIR)/ap.o \
+$(ALGLIB_DIR)/alglibinternal.o \
+$(ALGLIB_DIR)/alglibmisc.o \
+$(ALGLIB_DIR)/linalg.o \
+$(ALGLIB_DIR)/specialfunctions.o \
+$(ALGLIB_DIR)/statistics.o
 
 $(KMER_DIR)/%.o: $(KMER_DIR)/%.cc
 	$(CXX) $(CXXFLAGS) -c $< -o $@
@@ -39,8 +46,10 @@ $(FUNC_DIR)/%.o: $(FUNC_DIR)/%.cc
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 $(KMC_API_DIR)/%.o: $(KMC_API_DIR)/%.cpp
 	$(CXX) $(CXXFLAGS) -c $< -o $@ 
+$(ALGLIB_DIR)/%.o: $(ALGLIB_DIR)/%.cpp
+	$(CXX) $(CXXFLAGS2) -c $< -o $@
 
-kmerLSH: app/kmerLSH.cc $(KMER_OBJS) $(UTIL_OBJS) $(HASH_OBJS) $(IO_OBJS) $(FUNC_OBJS) $(KMC_API_OBJS)
+kmerLSH: app/kmerLSH.cc $(KMER_OBJS) $(UTIL_OBJS) $(HASH_OBJS) $(IO_OBJS) $(FUNC_OBJS) $(KMC_API_OBJS) $(ALGLIB_OBJS)
 	$(CXX) -o $@ $^ $(INC) $(LIBS) $(CXXLINK)
 
 clean: 
@@ -50,6 +59,7 @@ clean:
 	-rm -f $(UTIL_DIR)/*.o
 	-rm -f $(FUNC_DIR)/*.o
 	-rm -f $(KMC_API_DIR)/*.o
+	-rm -f $(ALGLIB_DIR)/*.o
 	-rm -f kmerLSH
 
 all: kmerLSH
